--- a/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_getCompanyFile.form
+++ b/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_getCompanyFile.form
@@ -353,6 +353,32 @@
             </dync:attribute>
           </form:attributes>
         </form:control>
+        <form:child xsi:type="form:Field" id="buttonUp" name="上传" customize="true">
+          <form:control type="widget/button">
+            <form:attributes source="widget/button">
+              <dync:attribute default="btn-primary" group="HTML设置" id="style" name="样式" value="btn-success">
+                <dync:render colSpan="1" height="0" multi="false" name="select">
+                  <dync:item name="默认" value="btn-default"/>
+                  <dync:item name="主要" value="btn-primary"/>
+                  <dync:item name="成功" value="btn-success"/>
+                  <dync:item name="信息" value="btn-info"/>
+                  <dync:item name="警告" value="btn-warning"/>
+                  <dync:item name="危险" value="btn-danger"/>
+                  <dync:item name="链接" value="btn-link"/>
+                  <dync:item name="通用" value="btn-white no-border"/>
+                </dync:render>
+                <dync:children/>
+              </dync:attribute>
+              <dync:attribute default="" group="事件设置" id="click" name="点击事件" value="buttonUp_click($event)">
+                <dync:render colSpan="1" height="0" multi="false" name="event">
+                  <dync:item name="params" value="$event"/>
+                </dync:render>
+                <dync:children/>
+              </dync:attribute>
+            </form:attributes>
+          </form:control>
+          <form:validation/>
+        </form:child>
         <form:child xsi:type="form:Field" id="button1" name="下载" customize="true">
           <form:control type="widget/button">
             <form:attributes source="widget/button">
@@ -399,36 +425,6 @@
                 <dync:render colSpan="1" height="0" multi="false" name="event">
                   <dync:item name="params" value="$event"/>
                 </dync:render>
-                <dync:children/>
-              </dync:attribute>
-            </form:attributes>
-          </form:control>
-          <form:validation/>
-        </form:child>
-        <form:child xsi:type="form:Field" id="button22" name="取消" customize="true">
-          <form:control type="widget/button">
-            <form:attributes source="widget/button">
-              <dync:attribute default="btn-primary" group="HTML设置" id="style" name="样式" value="btn-warning">
-                <dync:render colSpan="1" height="0" multi="false" name="select">
-                  <dync:item name="默认" value="btn-default"/>
-                  <dync:item name="主要" value="btn-primary"/>
-                  <dync:item name="成功" value="btn-success"/>
-                  <dync:item name="信息" value="btn-info"/>
-                  <dync:item name="警告" value="btn-warning"/>
-                  <dync:item name="危险" value="btn-danger"/>
-                  <dync:item name="链接" value="btn-link"/>
-                  <dync:item name="通用" value="btn-white no-border"/>
-                </dync:render>
-                <dync:children/>
-              </dync:attribute>
-              <dync:attribute default="" group="事件设置" id="click" name="点击事件" value="button22_click($event)">
-                <dync:render colSpan="1" height="0" multi="false" name="event">
-                  <dync:item name="params" value="$event"/>
-                </dync:render>
-                <dync:children/>
-              </dync:attribute>
-              <dync:attribute default="true" group="HTML设置" id="show" name="可见" value="false">
-                <dync:render colSpan="1" height="0" multi="false" name="checkboxAndExpr"/>
                 <dync:children/>
               </dync:attribute>
             </form:attributes>
@@ -532,6 +528,11 @@ view:function(rowObject){
 	$img_view.attr(&quot;src&quot;,rowObject.filePath);
 	$('#img_id').empty().append($img_view);
 	$view.divView.toggle();
+},
+
+buttonUp_click:function($event){
+	Modal.open(&quot;f/companyAttched_dlg&quot;,{&quot;info&quot;:$params.info},function(){
+	});
 }</form:scripts>
   <form:htmls>
 
