--- a/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_getDriverFile.form
+++ b/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_getDriverFile.form
@@ -552,9 +552,9 @@ fileView_customFormatter:function(cellvalue,options,rowObject,dictValueExpressio
 	return &quot;&lt;button ng-click='functions.view(rowObject)'>预览照片&lt;/button>&quot;;
 },
 view:function(rowObject){
-	$img_view = $(&quot;&lt;img/>&quot;);
-	$img_view.attr(&quot;src&quot;,rowObject.filePath);
-	$('#img_id').empty().append($img_view);
+	/*$img_view = $(&quot;&lt;img/>&quot;);
+	$img_view.attr(&quot;src&quot;,rowObject.filePath);*/
+	$('#img_id').empty().attr(&quot;src&quot;,rowObject.filePath);
 	$view.divView.toggle();
 },
 
@@ -564,6 +564,6 @@ buttonUP_click:function($event){
 }</form:scripts>
   <form:htmls>
 &lt;script type=&quot;text/ng-template&quot; id=&quot;divView_html&quot;>
-	&lt;div id=&quot;img_id&quot;>&lt;/div>
+	&lt;img id=&quot;img_id&quot; height=&quot;240&quot; width=&quot;320&quot; />
 &lt;/script></form:htmls>
 </form:Form>
