--- a/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_test.form
+++ b/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_test.form
@@ -329,9 +329,57 @@
     </form:control>
     <form:child xsi:type="form:Field" id="fileInputIframe" name="Iframe单文件上传" customize="true">
       <form:control type="widget/file_input_iframe">
-        <form:attributes source="widget/file_input_iframe"/>
+        <form:attributes source="widget/file_input_iframe">
+          <dync:attribute default="dbdir" group="HTML属性" id="process" name="上传处理器" value="dir">
+            <dync:render colSpan="1" height="0" multi="false" name="text"/>
+            <dync:children/>
+          </dync:attribute>
+          <dync:attribute default="" group="事件" id="onSuccess" name="上传成功" value="fileInputIframe_onSuccess(data)">
+            <dync:render colSpan="2" height="0" multi="false" name="event">
+              <dync:item name="params" value="data"/>
+            </dync:render>
+            <dync:children/>
+          </dync:attribute>
+          <dync:attribute default="" group="事件" id="onError" name="上传失败" value="fileInputIframe_onError(data)">
+            <dync:render colSpan="2" height="0" multi="false" name="event">
+              <dync:item name="params" value="data"/>
+            </dync:render>
+            <dync:children/>
+          </dync:attribute>
+        </form:attributes>
       </form:control>
       <form:validation/>
+    </form:child>
+    <form:child xsi:type="form:Group" id="div6" name="简单容器(DIV)">
+      <form:control type="container/div">
+        <form:attributes source="container/div">
+          <dync:attribute default="12" group="HTML配置" id="span" name="占位数" value="1">
+            <dync:render colSpan="1" height="0" multi="false" name="text"/>
+            <dync:children/>
+          </dync:attribute>
+          <dync:attribute default="" group="高级自定义" id="style" name="自定义style" value="margin-left:-40px;margin-top:5px">
+            <dync:render colSpan="2" height="0" multi="false" name="text"/>
+            <dync:children/>
+          </dync:attribute>
+        </form:attributes>
+      </form:control>
+      <form:child xsi:type="form:Field" id="buttonA1" name="照片预览" customize="true">
+        <form:control type="widget/button_a">
+          <form:attributes source="widget/button_a">
+            <dync:attribute default="" group="HTML设置" id="icon" name="图标" value="fa-arrows-alt">
+              <dync:render colSpan="1" height="0" multi="false" name="selectIcon"/>
+              <dync:children/>
+            </dync:attribute>
+            <dync:attribute default="" group="事件设置" id="click" name="单击事件" value="buttonA_click($event)">
+              <dync:render colSpan="1" height="0" multi="false" name="event">
+                <dync:item name="params" value="$event"/>
+              </dync:render>
+              <dync:children/>
+            </dync:attribute>
+          </form:attributes>
+        </form:control>
+        <form:validation/>
+      </form:child>
     </form:child>
   </form:child>
   <form:child xsi:type="form:Group" id="div4" name="简单容器(DIV)">
@@ -633,6 +681,24 @@
       <form:validation/>
     </form:child>
   </form:child>
+  <form:child xsi:type="form:Group" id="div3" name="简单容器(DIV)">
+    <form:control type="container/div">
+      <form:attributes source="container/div"/>
+    </form:control>
+    <form:child xsi:type="form:Field" id="buttonMessage" name="推送" customize="true">
+      <form:control type="widget/button">
+        <form:attributes source="widget/button">
+          <dync:attribute default="" group="事件设置" id="click" name="点击事件" value="buttonMessage_click($event)">
+            <dync:render colSpan="1" height="0" multi="false" name="event">
+              <dync:item name="params" value="$event"/>
+            </dync:render>
+            <dync:children/>
+          </dync:attribute>
+        </form:attributes>
+      </form:control>
+      <form:validation/>
+    </form:child>
+  </form:child>
   <form:datasources>
     <form:datasource xsi:type="form:Inputs">
       <form:input desc="" id="datas" name=""/>
@@ -764,5 +830,30 @@ listaccount_loadComplete:function(data){
 	$params.idi= listleng.length+1;&#xD;
 	alert($params.idi);&#xD;
 	
+},
+
+buttonMessage_click:function($event){
+		       var AlauditMemo = &quot;您好！您的申请分供方已通过初步认证，合作愉快！&quot;;&#xD;
+		        var myphone = &quot;18270888237&quot;;&#xD;
+		        $http.post(&quot;ws/s_sendAuditMessage&quot;,{&quot;content&quot;:AlauditMemo,&quot;mobilePhone&quot;:myphone})&#xD;
+		        .success(function(data){&#xD;
+		        	Messenger.post({type:'success',message:'消息推送成功'});&#xD;
+		        })
+},
+
+fileInputIframe_onSuccess:function(data){
+	Messenger.post({message:&quot;文件上传成功!&quot;,type:&quot;success&quot;,hideAfter:2,showCloseButton:true});&#xD;
+	$params.fileID=data;
+},
+
+fileInputIframe_onError:function(data){
+	Messenger.post({message:&quot;文件上传失败!&quot;,type:&quot;error&quot;,hideAfter:2,showCloseButton:true});
+},
+
+buttonA_click:function($event){
+	alert($params.fileID.url);&#xD;
+	var urr = $params.fileID.url;&#xD;
+	Modal.open(&quot;f/Viewtest&quot;,{&quot;url&quot;:urr},function(){&#xD;
+			    });
 }</form:scripts>
 </form:Form>
